# MESSENGERuvvs

./: .gitignore  .rtd-environment.yml  MANIFEST.in  main.py  pyproject.toml  setup.cfg
MESSENGERuvvs/: MESSENGER_summary_table.py  MESSENGERdata.py  MESSENGERmodel.py  MESSENGERview.py  __init__.py  create_merc_year_table.py  get_datapath.py  initialize_MESSENGERdata.py  plot_boresight.py  plot_methods.py  set_up_database.py
MESSENGERuvvs/data/: MES_merc_year.pkl  myfile.db
docs/: temp.pkl
tests/: temp.pkl  test_MESSENGER_view_data.py  test_MESSENGERmodel.py  test_MESSENGERuvvs_init.py  test_MSO_rotation_matrix.py  verify_sql.py
