[project]
name = "messengeruvvs"
version = "0.1.0"
description = "Routines for working with MESSENGER UVVS data"
readme = "README.md"
authors = [
    {name = "Matthew Burger",email = "mburger@stsci.edu"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "astropy (>=7.0.0,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipython (>=8.31.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "bokeh (>=3.6.2)",
    "selenium-firefox (>=2.0.8)",
    "plotly (>=5.24.1)",
    "spiceypy (>=6.0.0)",
    "sqlalchemy>=2.0.44",
    "dash (>=3.2.0,<4.0.0)",
]
